# CNNX

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: IR.hpp  StoreZip.hpp
include/IZIP/: FileHandle.hpp  StoreZip.hpp  ZipCompressor.hpp  ZipParser.hpp  ZipStruct.hpp
source/: StoreZip.cpp
source/IZIP/: FileHandle.cpp  StoreZip.cpp  ZipCompressor.cpp
